--- a/style.css
+++ b/style.css
@@ -180,4 +180,11 @@ body{
         transform: rotate(360deg);
     }
 }
-
+ .information{
+    display: flex;
+    color: aliceblue;
+ }
+ .planet{
+    display: flex;
+    color: aliceblue;
+ }
