--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body{
     background: url('https://img.freepik.com/premium-vector/stars-night-sky-background_697972-351.jpg');
+    width:100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -188,3 +189,4 @@ body{
     display: flex;
     color: aliceblue;
  }
+
